[gd_scene load_steps=4 format=2]

[ext_resource path="res://Interface/PlaneAvatar.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.207843 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="PlaneAvatar" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="Border" type="Panel" parent="."]
visible = false
offset_right = 87.0
offset_bottom = 56.0
mouse_filter = 1
custom_styles/panel = SubResource( 2 )

[node name="Background" type="Panel" parent="."]
offset_right = 87.0
offset_bottom = 56.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 87.0
offset_bottom = 56.0
mouse_filter = 1
custom_constants/offset_right = 10
custom_constants/offset_top = 10
custom_constants/offset_left = 10
custom_constants/offset_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 77.0
offset_bottom = 46.0

[node name="CallSign" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
offset_right = 67.0
offset_bottom = 14.0
mouse_filter = 1
text = "Call Sign"
uppercase = true

[node name="LegName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 18.0
offset_right = 67.0
offset_bottom = 32.0
text = "-"

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
offset_top = 36.0
offset_right = 67.0
offset_bottom = 36.0

[node name="View" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
visible = false
offset_right = 42.0
offset_bottom = 20.0
text = "View"

[node name="ClickTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="gui_input" from="." to="." method="_on_PlaneAvatar_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_PlaneAvatar_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PlaneAvatar_mouse_exited"]
[connection signal="timeout" from="ClickTimer" to="." method="_on_ClickTimer_timeout"]
